# FlowVault

mvp_project/: .env  .env.example  .gitignore  PROJECT_STATUS.md  README.md  package-lock.json  package.json  tailwind.config.js
mvp_project/.github/: copilot-instructions.md
mvp_project/contracts/: Cargo.toml  README.md  deploy.rs  output.txt
mvp_project/contracts/src/: lib.rs  main.rs  tests.rs
mvp_project/scripts/: deploy.sh
mvp_project/src/: App.tsx  index.css
mvp_project/src/components/: Navbar.tsx
mvp_project/src/config/: contract.ts  wagmi.ts
mvp_project/src/pages/: BusinessDashboard.tsx  CreateInvoice.tsx  Dashboard.tsx  InvestorDashboard.tsx  InvoiceDetails.tsx
