[package]
name = "flowvault-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.6"
alloy-primitives = "0.7"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "flowvault-contracts"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
debug = false
panic = "abort"
opt-level = "s"
lto = true

[lib]
crate-type = ["cdylib"]
